@@ -2,13 +2,13 @@ package com.example.pib2.Products.service.serviceImplProduct;
 
 import com.example.pib2.Products.model.Entity.Productos;
 import com.example.pib2.Products.model.dto.ProductDTO;
+import com.example.pib2.Categories.model.Entity.Categorias;
 import com.example.pib2.Products.service.serviceProduct.ProductService;
 import com.example.pib2.Products.repository.ProductRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl implements ProductService {
@@ -18,17 +18,37 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public List<ProductDTO> getAllProducts() {
-        return productRepository.findAll()
+        return productRepository.getAllWithCategories()
                 .stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .map(p -> {
+                    ProductDTO dto = new ProductDTO();
+                    dto.setProductId(p.getIdProducto());
+                    dto.setProducto(p.getProducto());
+                    dto.setDescripcion(p.getDescripcion());
+                    dto.setIsActive(p.getIsActive());
+                    dto.setUnidadId(p.getIdUnidad());
+                    dto.setIdCategoria(p.getCategoria().getIdCategoria());
+                    dto.setNombreCategoria(p.getCategoria().getCategoria());
+                    return dto;
+                })
+                .toList();
     }
 
     @Override
-    public ProductDTO getProductById(Long productId) {
-        Productos product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-        return convertToDto(product);
+    public ProductDTO getProductById(Long productoId) {
+        return productRepository.getByIdWithCategories(productoId)
+                .map(p -> {
+                    ProductDTO dto = new ProductDTO();
+                    dto.setProductId(p.getIdProducto());
+                    dto.setProducto(p.getProducto());
+                    dto.setDescripcion(p.getDescripcion());
+                    dto.setIsActive(p.getIsActive());
+                    dto.setUnidadId(p.getIdUnidad());
+                    dto.setIdCategoria(p.getCategoria().getIdCategoria());
+                    dto.setNombreCategoria(p.getCategoria().getCategoria());
+                    return dto;
+                })
+                .orElse(null);
     }
 
     @Override
@@ -46,7 +66,10 @@ public class ProductServiceImpl implements ProductService {
         product.setProducto(productDto.getProducto());
         product.setDescripcion(productDto.getDescripcion());
         product.setIdUnidad(productDto.getUnidadId());
-        product.setIdCategoria(productDto.getCategoriaId());
+
+        Categorias categoria = new Categorias();
+        categoria.setIdCategoria(productDto.getIdCategoria());
+        product.setCategoria(categoria);
 
         Productos updatedProduct = productRepository.save(product);
         return convertToDto(updatedProduct);
@@ -61,20 +84,27 @@ public class ProductServiceImpl implements ProductService {
     }
 
     private ProductDTO convertToDto(Productos product) {
-        return ProductDTO.builder()
-                .producto(product.getProducto())
-                .descripcion(product.getDescripcion())
-                .unidadId(product.getIdUnidad())
-                .categoriaId(product.getIdCategoria())
-                .build();
+        ProductDTO dto = new ProductDTO();
+        dto.setProductId(product.getIdProducto());
+        dto.setProducto(product.getProducto());
+        dto.setDescripcion(product.getDescripcion());
+        dto.setIsActive(product.getIsActive());
+        dto.setUnidadId(product.getIdUnidad());
+        dto.setIdCategoria(product.getCategoria().getIdCategoria());
+        dto.setNombreCategoria(product.getCategoria().getCategoria());
+        return dto;
     }
 
     private Productos convertToEntity(ProductDTO productDto) {
+        Categorias categoria = new Categorias();
+        categoria.setIdCategoria(productDto.getIdCategoria());
+
         return Productos.builder()
                 .producto(productDto.getProducto())
                 .descripcion(productDto.getDescripcion())
                 .idUnidad(productDto.getUnidadId())
-                .idCategoria(productDto.getCategoriaId())
+                .categoria(categoria)
+                .isActive(productDto.getIsActive())
                 .build();
     }
 }
